--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Form Fodder",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "manifest_version": 2,
-  "description": "...",
+  "description": "A simple html form filler",
 
   "options_ui": {
     "page": "options.html",
